1. added BPP healthcheck configuration 2. fixed dockerfile 3. fixed pom.xml 4. moved project to java 8 level 5. added docker-compose 6. added configuration for docker run